# core

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: .env  .env.example  Dockerfile  main.py  package.json  requirements.txt
apps/api/auth/: dependencies.py  router.py  schemas.py  service.py
apps/api/core/: config.py
apps/api/db/: database.py  models.py
apps/api/routers/: equipment.py  ledger.py  projects.py  requisitions.py  schemas.py  users.py
apps/api/services/: constants.py  inventory_service.py  notification_service.py  project_service.py  requisition_service.py  (+1 more)
apps/migration/: .env.example  README.md  pyproject.toml  requirements.txt
apps/migration/makerlab_migrate/: __init__.py  __main__.py  cli.py  logging.py  settings.py
apps/migration/makerlab_migrate/dump/: __init__.py  dump_reader.py  models.py  wiki_extractors.py
apps/migration/makerlab_migrate/orchestration/: __init__.py  migrator.py  state.py
apps/migration/makerlab_migrate/postgres/: __init__.py  engine.py  repos.py  schema_bootstrap.py
apps/migration/makerlab_migrate/snipeit/: __init__.py  client.py  upsert.py
apps/mobile/: README.md  app.json  babel.config.js  package-lock.json  package.json  tailwind.config.js
apps/web/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
docs/: SNIPEIT.md
docs/api/: snipeit_asset_management.md
docs/migration/: migration-module-plan-2d9421.md
infra/db/: .env.postgres  schema.sql  seed.sql
infra/docker/: docker-compose.yml
infra/nginx/: nginx.conf
infra/snipeit/: .env.snipeit  .env.snipeit.example
(+62 files in other folders)
